# obs-hevc-flv-source

./: .gitignore  CMakeLists.txt  README.en.md  README.md  README.zh-CN.md  buildspec.json
.github/workflows/: build-windows.yml
cmake/common/: buildnumber.cmake
data/locale/: en-US.ini
src/: plugin-main.cpp
